--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "concurrently": "^9.2.1"
   },
   "dependencies": {
-    "groq-sdk": "^0.37.0"
+    "groq-sdk": "^0.37.0",
+    "react-toastify": "^11.0.5"
   }
 }
